--- a/ori_notebook.ipynb
+++ b/ori_notebook.ipynb
@@ -864,6 +864,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df.iloc[:, [4,6]].values.astype('float64')\n",
+    "y = df.iloc[:, 0].values.astype('float64')\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinearRegression SK => 0.8131879450881866\n",
+      "Ridge SK => 0.8131884821864304\n",
+      "Lasso SK => 0.8115404748272447\n",
+      "ElasticNet SK => 0.8120263033765382\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name, model in models:\n",
+    "    model.fit(X_train, y_train)\n",
+    "    predictions = model.predict(X_test)\n",
+    "    \n",
+    "    r_sqared = stats.get_r_squared(y_test, predictions)\n",
+    "    msg = '{} => {}'.format(name, r_sqared)\n",
+    "    print(msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
