--- a/ori_notebook.ipynb
+++ b/ori_notebook.ipynb
@@ -46,7 +46,7 @@
    "metadata": {},
    "source": [
     "$$\\textbf{Multivariate Linear Regression: }$$\n",
-    "$$w = (X^\\top X)^{-1}X^\\top y \\ \\textbf{  ==>  }  w = numpy.linalg.solve(X^\\top X, X^\\top y)$$`"
+    "$$w = (X^\\top X)^{-1}X^\\top y \\ \\ Python \\ and \\ numpy \\ solution \\ =>  w = numpy.linalg.solve(X^\\top X, X^\\top y)$$`"
    ]
   },
   {
@@ -54,7 +54,7 @@
    "metadata": {},
    "source": [
     "$$\\textbf{Ridge Regression: }$$\n",
-    "$$w = (\\lambda I + X^\\top X)^{-1}X^\\top y \\ \\textbf{  ==>  }  w = numpy.linalg.solve(\\lambda I +X^\\top X, X^\\top y)$$"
+    "$$w = (\\lambda I + X^\\top X)^{-1}X^\\top y \\ \\ Python \\ and \\ numpy \\ solution \\ => w = numpy.linalg.solve(\\lambda I +X^\\top X, X^\\top y)$$"
    ]
   },
   {
@@ -62,9 +62,9 @@
    "metadata": {},
    "source": [
     "### Za evaluaciju modela korišćene su sledeće metrike:\n",
-    "    1. Coefficient of determination - najbolji mogući rezultat je 1.0, može biti i negativan\n",
+    "    1. Coefficient of determination (R Squared) - najbolji mogući rezultat je 1.0, može biti i negativan\n",
     "    2. Mean Absolute Error - što je manja vrednost, model je bolji\n",
-    "    3. Explained Variance Score - najbolji mogući rezultat je 1.0, što je manji to je model lošiji"
+    "    3. Explained Variance Score - najbolji mogući rezultat je 1.0, što je manji model je lošiji"
    ]
   },
   {
