--- a/ori_notebook.ipynb
+++ b/ori_notebook.ipynb
@@ -27,34 +27,106 @@
     "\n",
     "#### Broj atributa: 9\n",
     "\n",
-    "### Algoritmi koji su korišteni su:\n",
-    "    1. Multivariate Linear Regression \n",
-    "    2. Ridge Regression\n",
-    "    3. Lasso Regression\n",
-    "    4. ElasticNet Regression - predstavlja kombinaciju Ridge i Lasso regresije"
+    "### Algoritmi koji su korišćeni:\n",
+    "#####    1. Multivariate Linear Regression\n",
+    "      Regresija ima za cilj da pronađe funkciju koja se “najbolje uklapa” u podatke uz\n",
+    "      pretpostavku da rezultujuća funkcija ne mora da prođe kroz svaku tačku.\n",
+    "#####    2. Ridge Regression \n",
+    "      Varijacija obične regresije. Korisna ukoliko dataset sadrži outlier-e, koji kvare model.\n",
+    "      Problem rešava dodavanjem kvadrirane norme težina na funkciju greške.\n",
+    "#####    3. Lasso Regression \n",
+    "      Varijacija obične regresije. Korisna ukoliko dataset ima mali broj nezavisnih promenljivih,\n",
+    "      ali velik broj tačaka. Problem rešava dodavanjem norme težina na funkciju greške.\n",
+    "#####    4. ElasticNet Regression\n",
+    "      Predstavlja kombinaciju Ridge i Lasso regresije."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\textbf{Regression model: } \\hat{y} = w^\\top X, \\ \\hat{y} - vektor \\ predikcija $$"
+    "$$ \\textbf{Multivariate Linear Regression: } $$\n",
+    "\n",
+    "$$ \\textbf{Error function:} \\ E = \\sum_{i=1}^{N} (y_{i} - \\hat{y_{i}})^{2} =  \\sum_{i=1}^{N} (y_{i} - w^\\top x_{i})^{2},\\ y_{i} - stvarna \\ vrednost, \\ \\hat{y_{i}} - predikcija $$\n",
+    "\n",
+    "$$ \\frac{\\partial E}{\\partial w_{j}} = \\sum_{i=1}^N 2(y_{i} - w^\\top x_{i})(-x_{ij}) = 0, \\ i - red, \\ j - kolona(nezavisna \\ promenljiva) $$\n",
+    "\n",
+    "$$ w^\\top \\sum_{i=1}^N x_{i}x_{ij} = \\sum_{i=1}^N y_{i}x_{ij} $$\n",
+    "\n",
+    "$$ w^\\top(X^\\top X) = y^\\top X $$\n",
+    "\n",
+    "$$ \\bigg[w^\\top(X^\\top X)\\bigg]^\\top = \\bigg[y^\\top X\\bigg]^\\top$$\n",
+    "\n",
+    "$$ (X^\\top X)w = X^\\top y$$\n",
+    "\n",
+    "$$ w = (X^\\top X)^{-1}X^\\top y $$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\textbf{Multivariate Linear Regression: }$$\n",
-    "$$w = (X^\\top X)^{-1}X^\\top y \\ \\ Python \\ and \\ numpy \\ solution \\ =>  w = numpy.linalg.solve(X^\\top X, X^\\top y)$$`"
+    "$$ \\textbf{Ridge Regression: } $$\n",
+    "\n",
+    "$$ \\textbf{Error function:} \\ E = \\sum_{i=1}^{N} (y_{i} - \\hat{y_{i}})^{2} + \\lambda \\ |w|^{2},\\ y_{i} - stvarna \\ vrednost, \\ \\hat{y_{i}} - predikcija $$\n",
+    "\n",
+    "$$ |w|^{2} = w^\\top w = w_{1}^{2} + w_{2}^{2} + ... + w_{i}^{2}, \\ w - vektor \\ težina, \\ \\lambda - proizvoljan \\ parametar $$\n",
+    "\n",
+    "$$ \\textbf{Matrix form of Error function}: $$\n",
+    "\n",
+    "$$ E = (y - Xw)^\\top (y - Xw) + \\lambda w^\\top w $$\n",
+    "\n",
+    "$$ E = y^\\top y - 2y^\\top Xw + w^\\top X^\\top Xw + \\lambda w^\\top w $$\n",
+    "\n",
+    "$$ \\frac{\\partial E}{\\partial w} = -2X^\\top y + 2X^\\top Xw + 2 \\lambda w = 0 $$\n",
+    "\n",
+    "$$ w = (\\lambda I + X^\\top X)^{-1}X^\\top y $$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\textbf{Ridge Regression: }$$\n",
-    "$$w = (\\lambda I + X^\\top X)^{-1}X^\\top y \\ \\ Python \\ and \\ numpy \\ solution \\ => w = numpy.linalg.solve(\\lambda I +X^\\top X, X^\\top y)$$"
+    "$$ \\textbf{Lasso Regression: } $$\n",
+    "\n",
+    "$$ \\textbf{Error function:} \\ E = \\sum_{i=1}^{N} (y_{i} - \\hat{y_{i}})^{2} + \\lambda \\ |w|,\\ y_{i} - stvarna \\ vrednost, \\ \\hat{y_{i}} - predikcija $$\n",
+    "\n",
+    "$$ \\textbf{Matrix form of Error function}: $$\n",
+    "\n",
+    "$$ E = (y - Xw)^\\top (y - Xw) + \\lambda w$$\n",
+    "\n",
+    "$$ E = y^\\top y - 2y^\\top Xw + w^\\top X^\\top Xw + \\lambda |w| $$\n",
+    "$$ \\frac{\\partial E}{\\partial w} = -2X^\\top y + 2X^\\top Xw + \\lambda sign(w) = 0 $$\n",
+    "\n",
+    "$$ sign(x) = \n",
+    "     \\begin{cases}\n",
+    "        1 &\\quad\\text{if x > 0} \\\\\n",
+    "       -1 &\\quad\\text{if x < 0}\\\\\n",
+    "        0 &\\quad\\text{if x = 0}\\\\\n",
+    "     \\end{cases} $$\n",
+    "     \n",
+    "$$ \\text{Iz prethodne formule w ne može da se izrazi, pa se ovaj problem rešava Gradient Descent algoritmom} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\textbf{ElasticNet Regression: } $$\n",
+    "\n",
+    "$$ \\textbf{Error function:} \\ E = \\sum_{i=1}^{N} (y_{i} - \\hat{y_{i}})^{2} + \\lambda \\ |w| + \\lambda |w|^{2},\\ y_{i} - stvarna \\ vrednost, \\ \\hat{y_{i}} - predikcija $$\n",
+    "\n",
+    "$$ |w|^{2} = w^\\top w = w_{1}^{2} + w_{2}^{2} + ... + w_{i}^{2}, \\ w - vektor \\ težina, \\ \\lambda - proizvoljan \\ parametar $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\text{Predikcija se u svakom od prethodnih modela dobija sledećom formulom} $$\n",
+    "\n",
+    "\n",
+    "$$\\textbf{Regression model: } \\hat{y} = w^\\top X, \\ \\hat{y} - vektor \\ predikcija, \\ w - težine $$"
    ]
   },
   {
@@ -69,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +281,7 @@
        "4       1                ford torino  "
       ]
      },
-     "execution_count": 108,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +439,7 @@
        "max     82.000000    3.000000  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +466,7 @@
        "str"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +505,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +665,7 @@
        "max       24.800000   82.000000    3.000000  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +949,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -955,8 +1027,8 @@
      "text": [
       "LinearRegression => EVS: 0.8137427516623791 MAE: 0.30964832158846334 R^2: 0.8118881423003085\n",
       "Ridge => EVS: 0.7867401491718748 MAE: 0.3289504822276145 R^2: 0.7827038041355148\n",
-      "Lasso => EVS: 0.8142102339620481 MAE: 0.3104299628050918 R^2: 0.8116082533082403\n",
-      "ElasticNet => EVS: 0.7866609457893955 MAE: 0.32913100327987166 R^2: 0.7826076492762688\n"
+      "Lasso => EVS: 0.8193547452327914 MAE: 0.30181290138018424 R^2: 0.8168357772862944\n",
+      "ElasticNet => EVS: 0.7866619134930474 MAE: 0.32912891849651077 R^2: 0.782608812950172\n"
      ]
     }
    ],
@@ -983,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -1043,8 +1115,8 @@
      "text": [
       "LinearRegression => EVS: 0.8831196284652548 MAE: 0.25063561320840566 R^2: 0.8825896017666394\n",
       "Ridge => EVS: 0.8301534298422119 MAE: 0.3129163541154436 R^2: 0.8293606768168369\n",
-      "Lasso => EVS: 0.8572332841781016 MAE: 0.2794251358731247 R^2: 0.8569728739341673\n",
-      "ElasticNet => EVS: 0.8304970063921726 MAE: 0.31264333729488025 R^2: 0.8297137163534065\n"
+      "Lasso => EVS: 0.8607831760410353 MAE: 0.2747677670442469 R^2: 0.8604678229941909\n",
+      "ElasticNet => EVS: 0.8304992665682225 MAE: 0.31264152261641714 R^2: 0.8297160392376124\n"
      ]
     }
    ],
@@ -1071,12 +1143,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Nakon podele dataseta na osnovu porekla automobila, vidimo da je za automobile proizvedene u Americi predikcija znatno bolja u poređenju sa predikcijom koja je izvšena nad celim datasetom."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Predikcija za automobile Evropskih proizvođača"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -1094,8 +1173,8 @@
      "text": [
       "LinearRegression => EVS: 0.5098774688575416 MAE: 0.6233861518595981 R^2: 0.5082449437063821\n",
       "Ridge => EVS: 0.45323910997516825 MAE: 0.6217196117618976 R^2: 0.4508153742709565\n",
-      "Lasso => EVS: 0.5327523854848288 MAE: 0.596247898202514 R^2: 0.531784626524938\n",
-      "ElasticNet => EVS: 0.4544329740253604 MAE: 0.621161273441204 R^2: 0.452010455629017\n"
+      "Lasso => EVS: 0.5410514692237336 MAE: 0.5937936015200458 R^2: 0.5397851141353738\n",
+      "ElasticNet => EVS: 0.45443732988220165 MAE: 0.6211592241426439 R^2: 0.4520148159532441\n"
      ]
     }
    ],
@@ -1127,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1136,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -1145,8 +1224,8 @@
      "text": [
       "LinearRegression => EVS: 0.5676383330883727 MAE: 0.474171672610692 R^2: 0.5676096725465458\n",
       "Ridge => EVS: 0.48146943660348496 MAE: 0.5681333649478454 R^2: 0.47967239260830485\n",
-      "Lasso => EVS: 0.5334536303674842 MAE: 0.5060275577489718 R^2: 0.5334282922765716\n",
-      "ElasticNet => EVS: 0.48206962488941274 MAE: 0.5679633642644432 R^2: 0.4803545494004339\n"
+      "Lasso => EVS: 0.5250406134566131 MAE: 0.5179103926277525 R^2: 0.5250091176719238\n",
+      "ElasticNet => EVS: 0.48207031744213724 MAE: 0.5679631654386071 R^2: 0.4803553366999962\n"
      ]
     }
    ],
@@ -1167,6 +1246,13 @@
     "    \n",
     "    msg = \"{} => EVS: {} MAE: {} R^2: {}\".format(name, score, mae, r_sqared)\n",
     "    print(msg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prilikom predikcije za automobile proizvedene u Evropi i Aziji dobijaju se dosta lošiji rezultati, za razliku od automobila koji su proizvedeni u Americi."
    ]
   }
  ],
