fixed typo in linear_model, added enseble algorithms

--- a/ori_notebook.ipynb
+++ b/ori_notebook.ipynb
@@ -151,7 +151,7 @@
     "import seaborn as sns\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
-    "%matplotlib inline\n"
+    "%matplotlib inline"
    ]
   },
   {
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1139,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1217,8 +1217,8 @@
      "text": [
       "LinearRegression => EVS: 0.8137427516623791 MAE: 0.30964832158846334 R^2: 0.8118881423003085\n",
       "Ridge => EVS: 0.7867401491718748 MAE: 0.3289504822276145 R^2: 0.7827038041355148\n",
-      "Lasso => EVS: 0.8155975824040702 MAE: 0.30847338238352445 R^2: 0.8130717161135219\n",
-      "ElasticNet => EVS: 0.7866625574326389 MAE: 0.32912752973707865 R^2: 0.7826095874309312\n"
+      "Lasso => EVS: 0.8145521141523806 MAE: 0.309767390909785 R^2: 0.8119512816144795\n",
+      "ElasticNet => EVS: 0.7866625777529874 MAE: 0.32912748589367286 R^2: 0.7826096118724555\n"
      ]
     }
    ],
@@ -1245,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1305,8 +1305,8 @@
      "text": [
       "LinearRegression => EVS: 0.8831196284652548 MAE: 0.25063561320840566 R^2: 0.8825896017666394\n",
       "Ridge => EVS: 0.8301534298422119 MAE: 0.3129163541154436 R^2: 0.8293606768168369\n",
-      "Lasso => EVS: 0.8600192977355251 MAE: 0.2757333476419057 R^2: 0.8597197906978131\n",
-      "ElasticNet => EVS: 0.8304960588823865 MAE: 0.31264409796930664 R^2: 0.829712742556955\n"
+      "Lasso => EVS: 0.8574191723014447 MAE: 0.27878491777337483 R^2: 0.8571355544083\n",
+      "ElasticNet => EVS: 0.8304956025669556 MAE: 0.3126444642902553 R^2: 0.8297122735823949\n"
      ]
     }
    ],
@@ -1345,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1363,8 +1363,8 @@
      "text": [
       "LinearRegression => EVS: 0.5098774688575416 MAE: 0.6233861518595981 R^2: 0.5082449437063821\n",
       "Ridge => EVS: 0.45323910997516825 MAE: 0.6217196117618976 R^2: 0.4508153742709565\n",
-      "Lasso => EVS: 0.5359415593108378 MAE: 0.5950484134050624 R^2: 0.5348849516544679\n",
-      "ElasticNet => EVS: 0.45443389475660345 MAE: 0.6211608402725434 R^2: 0.4520113773045502\n"
+      "Lasso => EVS: 0.5427364486412638 MAE: 0.5941545341130732 R^2: 0.5418431867843501\n",
+      "ElasticNet => EVS: 0.4544335928974208 MAE: 0.6211609822861277 R^2: 0.45201107513578376\n"
      ]
     }
    ],
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1405,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1414,8 +1414,8 @@
      "text": [
       "LinearRegression => EVS: 0.5676383330883727 MAE: 0.474171672610692 R^2: 0.5676096725465458\n",
       "Ridge => EVS: 0.48146943660348496 MAE: 0.5681333649478454 R^2: 0.47967239260830485\n",
-      "Lasso => EVS: 0.5195563926038635 MAE: 0.5246742002491428 R^2: 0.5195111447903389\n",
-      "ElasticNet => EVS: 0.48207236808206433 MAE: 0.5679625766808122 R^2: 0.4803576678863991\n"
+      "Lasso => EVS: 0.5259438438155499 MAE: 0.5119195589370359 R^2: 0.5259190964152971\n",
+      "ElasticNet => EVS: 0.4820762194506425 MAE: 0.5679614707675588 R^2: 0.48036204616696576\n"
      ]
     }
    ],
@@ -1454,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1474,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1484,17 +1484,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LinearRegression => EVS: 0.5668336933462839 MAE: 0.4873278266011343 R^2: 0.5587622965963117\n",
-      "Ridge => EVS: 0.556768608127677 MAE: 0.4967303770314546 R^2: 0.5500064945189098\n",
-      "Lasso => EVS: 0.5722772516515707 MAE: 0.4843947491633811 R^2: 0.564435881685218\n",
-      "ElasticNet => EVS: 0.5571106558861225 MAE: 0.49650916100954207 R^2: 0.5503414740400895\n"
+      "LinearRegression => EVS: 0.5668336933462839 MAE: 0.4873278266011343 R^2: 0.5587622965963118\n",
+      "Ridge => EVS: 0.556768608127677 MAE: 0.49673037703145456 R^2: 0.5500064945189098\n",
+      "Lasso => EVS: 0.5722772516515706 MAE: 0.484394749163381 R^2: 0.5644358816852179\n",
+      "ElasticNet => EVS: 0.5571106558861224 MAE: 0.4965091610095421 R^2: 0.5503414740400894\n"
      ]
     }
    ],
@@ -1520,17 +1520,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LinearRegression => EVS: 0.6037855321212592 MAE: 0.4834732835407762 R^2: 0.5921166112880015\n",
+      "LinearRegression => EVS: 0.6037855321212591 MAE: 0.4834732835407762 R^2: 0.5921166112880016\n",
       "Ridge => EVS: 0.6059931744546936 MAE: 0.46286713021791176 R^2: 0.596899982641425\n",
       "Lasso => EVS: 0.6124941137459282 MAE: 0.47362460989295585 R^2: 0.6012657119709192\n",
-      "ElasticNet => EVS: 0.6063395766171025 MAE: 0.4627108275501431 R^2: 0.5972321423304776\n"
+      "ElasticNet => EVS: 0.6063395766171022 MAE: 0.46271082755014303 R^2: 0.5972321423304775\n"
      ]
     }
    ],
@@ -1558,17 +1558,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LinearRegression => EVS: 0.5501152881660701 MAE: 0.5095248964223429 R^2: 0.5432002403224392\n",
+      "LinearRegression => EVS: 0.55011528816607 MAE: 0.5095248964223428 R^2: 0.5432002403224394\n",
       "Ridge => EVS: 0.5602514558209142 MAE: 0.5059906030722556 R^2: 0.554293546067977\n",
-      "Lasso => EVS: 0.5601166099409894 MAE: 0.5044721261317947 R^2: 0.5533668083468992\n",
-      "ElasticNet => EVS: 0.5605318448221897 MAE: 0.5058721368251348 R^2: 0.5545686701534762\n"
+      "Lasso => EVS: 0.5601166099409893 MAE: 0.5044721261317947 R^2: 0.5533668083468993\n",
+      "ElasticNet => EVS: 0.5605318448221897 MAE: 0.5058721368251349 R^2: 0.5545686701534762\n"
      ]
     }
    ],
@@ -1596,17 +1596,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LinearRegression => EVS: 0.6798480346210569 MAE: 0.4268334377967411 R^2: 0.672813752403141\n",
-      "Ridge => EVS: 0.6762705980178317 MAE: 0.4089100713741052 R^2: 0.6702364097294837\n",
-      "Lasso => EVS: 0.6883869090251569 MAE: 0.41743677803013185 R^2: 0.6815160971565098\n",
-      "ElasticNet => EVS: 0.6767035066081235 MAE: 0.408624187321376 R^2: 0.6706634924367252\n"
+      "LinearRegression => EVS: 0.6798480346210569 MAE: 0.42683343779674116 R^2: 0.6728137524031409\n",
+      "Ridge => EVS: 0.6762705980178316 MAE: 0.40891007137410523 R^2: 0.6702364097294837\n",
+      "Lasso => EVS: 0.6883869090251569 MAE: 0.41743677803013185 R^2: 0.6815160971565097\n",
+      "ElasticNet => EVS: 0.6767035066081235 MAE: 0.40862418732137606 R^2: 0.6706634924367252\n"
      ]
     }
    ],
@@ -1634,17 +1634,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LinearRegression => EVS: 0.13520363432268268 MAE: 0.7161943929770985 R^2: 0.13047936255853188\n",
-      "Ridge => EVS: 0.13562581784543715 MAE: 0.7242573266663124 R^2: 0.1311617432371276\n",
-      "Lasso => EVS: 0.13785844667472624 MAE: 0.7171194013704604 R^2: 0.13321462173296805\n",
-      "ElasticNet => EVS: 0.13559121134662977 MAE: 0.724297108383642 R^2: 0.13112790844911004\n"
+      "LinearRegression => EVS: 0.13520363432268256 MAE: 0.7161943929770985 R^2: 0.13047936255853188\n",
+      "Ridge => EVS: 0.13562581784543704 MAE: 0.7242573266663124 R^2: 0.1311617432371277\n",
+      "Lasso => EVS: 0.13785844667472613 MAE: 0.7171194013704603 R^2: 0.13321462173296816\n",
+      "ElasticNet => EVS: 0.13559121134662955 MAE: 0.7242971083836421 R^2: 0.13112790844911004\n"
      ]
     }
    ],
@@ -1672,17 +1672,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LinearRegression => EVS: 0.33778607294684315 MAE: 0.6483234641646715 R^2: 0.33777103535545605\n",
-      "Ridge => EVS: 0.3343693028854601 MAE: 0.6593407737219323 R^2: 0.3341734815344114\n",
+      "LinearRegression => EVS: 0.33778607294684304 MAE: 0.6483234641646715 R^2: 0.33777103535545605\n",
+      "Ridge => EVS: 0.33436930288545996 MAE: 0.6593407737219322 R^2: 0.3341734815344114\n",
       "Lasso => EVS: 0.3429629649609607 MAE: 0.6496030463599737 R^2: 0.3429629261515388\n",
-      "ElasticNet => EVS: 0.33421581625073815 MAE: 0.659397230945727 R^2: 0.3340179364288579\n"
+      "ElasticNet => EVS: 0.33421581625073804 MAE: 0.659397230945727 R^2: 0.3340179364288579\n"
      ]
     }
    ],
@@ -1710,17 +1710,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LinearRegression => EVS: 0.301376990108265 MAE: 0.6168745306970007 R^2: 0.2937710085485874\n",
-      "Ridge => EVS: 0.2929112562453796 MAE: 0.6352353210210604 R^2: 0.2864536220355096\n",
-      "Lasso => EVS: 0.3039380913936045 MAE: 0.6207775885320207 R^2: 0.2966089695413723\n",
-      "ElasticNet => EVS: 0.2927753074352526 MAE: 0.6353354841491907 R^2: 0.28632208751649\n"
+      "LinearRegression => EVS: 0.3013769901082649 MAE: 0.6168745306970007 R^2: 0.2937710085485875\n",
+      "Ridge => EVS: 0.2929112562453796 MAE: 0.6352353210210605 R^2: 0.2864536220355096\n",
+      "Lasso => EVS: 0.3039380913936044 MAE: 0.6207775885320207 R^2: 0.2966089695413725\n",
+      "ElasticNet => EVS: 0.2927753074352525 MAE: 0.6353354841491907 R^2: 0.28632208751649\n"
      ]
     }
    ],
@@ -1755,24 +1755,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.ensemble import AdaBoostRegressor\n",
+    "from sklearn.ensemble import BaggingRegressor\n",
+    "from sklearn.ensemble import ExtraTreesRegressor\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "X = df.iloc[:, 1 : 8].values.astype('float64')\n",
+    "y = df.iloc[:, 0].values.astype('float64')\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "models = []\n",
+    "models.append(('AdaBoost', AdaBoostRegressor()))\n",
+    "models.append(('Bagging', BaggingRegressor()))\n",
+    "models.append(('ExtraTree', ExtraTreesRegressor()))\n",
+    "models.append(('GradientBoosting', GradientBoostingRegressor()))\n",
+    "models.append(('RandomForest', RandomForestRegressor()))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AdaBoost => EVS: 0.8496780691585087 MAE: 2.232144435358608 R^2: 0.8256554508131131\n",
+      "AdaBoost features:\n",
+      "[0.02689481 0.17215512 0.24342844 0.31130537 0.02866066 0.2096454\n",
+      " 0.0079102 ]\n",
+      "\n",
+      "Bagging => EVS: 0.8753395224590996 MAE: 1.9197457627118644 R^2: 0.865552325106664\n",
+      "{} doesn't have feature_importances_ field property\n",
+      "\n",
+      "ExtraTree => EVS: 0.872152080471124 MAE: 1.8681355932203387 R^2: 0.8648703041355569\n",
+      "ExtraTree features:\n",
+      "[0.38485212 0.14496752 0.07270372 0.19540585 0.03106231 0.12287767\n",
+      " 0.04813083]\n",
+      "\n",
+      "GradientBoosting => EVS: 0.8592722383816329 MAE: 1.9673086950074434 R^2: 0.850768923259992\n",
+      "GradientBoosting features:\n",
+      "[0.04079464 0.16636055 0.1825955  0.26106236 0.19158934 0.13662125\n",
+      " 0.02097635]\n",
+      "\n",
+      "RandomForest => EVS: 0.872571352745213 MAE: 1.9345762711864405 R^2: 0.8619822592060226\n",
+      "RandomForest features:\n",
+      "[0.19011723 0.34905786 0.21687333 0.13542311 0.02404325 0.07990938\n",
+      " 0.00457584]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name, model in models:\n",
+    "    model.fit(X_train, y_train)\n",
+    "    predictions = model.predict(X_test)\n",
+    "    \n",
+    "    r_sqared = stats.get_r_squared(y_test, predictions)\n",
+    "    score = explained_variance_score(y_test, predictions)\n",
+    "    mae = mean_absolute_error(predictions, y_test)\n",
+    "        \n",
+    "    msg = \"{} => EVS: {} MAE: {} R^2: {}\".format(name, score, mae, r_sqared) \n",
+    "    print(msg)\n",
+    "    \n",
+    "    if hasattr(model, 'feature_importances_'):\n",
+    "        print(\"{} features:\\n{}\\n\".format(name, model.feature_importances_))\n",
+    "    else:\n",
+    "        print(\"{} doesn't have feature_importances_ field property\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Primenom boosting algoritama dobijaju se dosta bolji rezultati nego primenom klasičnih regresionih metoda.\n",
+    "\n",
+    "Za **AdaBoost** algoritam najvažniji atributi su: broj konjskih snaga, težina i ubzanje automobila.\n",
+    "\n",
+    "Za **ExtraTree** algoritam najvažniji atributi su: prenos, broj konjskih snaga i težina automobila.\n",
+    "\n",
+    "Za **GradientBoosting** algoritam najvažniji atributi su: prenos, broj konjskih snaga i težina automobila.\n",
+    "\n",
+    "Za **RandomForest** algoritam najvažniji atributi su: prenos, broj konjskih snaga i težina automobila."
+   ]
   },
   {
    "cell_type": "code",
