--- a/ori_notebook.ipynb
+++ b/ori_notebook.ipynb
@@ -876,7 +876,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Na prethodnom grafiku prikazana je linearna zavisnost mpg atributa od dispacement-a. Korelacija je jaka (-0.81) i negativna, što znači da se povećanjem displacement-a smanjuje mpg, odnosno potrošnja se povećava."
+    "Na prethodnom grafiku prikazana je linearna zavisnost mpg atributa od dispacement atributa. Korelacija je jaka (-0.81) i negativna, što znači da se povećanjem displacement atributa smanjuje mpg, odnosno potrošnja se povećava."
    ]
   },
   {
@@ -996,7 +996,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Na ovom grafiku prikazana je linearna zavisnost mpg atributa od težine atributa. Weight atribut ima najveću korelaciju (-0.83), što znači da se povećanjem težine smanjuje mpg, odnosno potrošnja se povećava."
+    "Na ovom grafiku prikazana je linearna zavisnost mpg atributa od weight atributa. Weight atribut ima najveću korelaciju (-0.83), što znači da se povećanjem weight atributa smanjuje mpg, odnosno potrošnja se povećava."
    ]
   },
   {
@@ -1056,7 +1056,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Na ovom grafiku je prikazana linearna zavinost mpg atributa od ubrzanja. Korelacija je slaba i pozitivna, što znači da sa povećanjem ubrzanja povećava se mpg, odnosno potrošnja se smanjuje."
+    "Na ovom grafiku je prikazana linearna zavinost mpg atributa od acceleration atributa. Korelacija je slaba i pozitivna, što znači da sa povećanjem acceleration atributa povećava se mpg, odnosno potrošnja se smanjuje."
    ]
   },
   {
